Fixed paragraph spacing rendering and font size in feature rows

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -73,6 +73,19 @@
   }
 }
 
+.archive__item-excerpt-feature {
+  margin-top: 1rem;
+  font-size: $type-size-4;
+
+  & + p {
+    text-indent: 0;
+  }
+
+  a {
+    position: relative;
+  }
+}
+
 .archive__item-excerpt {
   margin-top: 0;
   font-size: $type-size-6;
